openmetadata-docs/content/v1.1.0/main-concepts/metadata-standard/schemas/entity/services/connections/database/datalakeConnection.md
---
title: datalakeConnection
slug: /main-concepts/metadata-standard/schemas/entity/services/connections/database/datalakeconnection
---

# DatalakeConnection

*Datalake Connection Config*

## Properties

- **`type`**: Service Type. Refer to *[#/definitions/datalakeType](#definitions/datalakeType)*. Default: `"Datalake"`.
- **`configSource`**: Available sources to fetch files.
  - **One of**
    - : Refer to *[datalake/azureConfig.json](#talake/azureConfig.json)*.
    - : Refer to *[datalake/gcsConfig.json](#talake/gcsConfig.json)*.
    - : Refer to *[datalake/s3Config.json](#talake/s3Config.json)*.
- **`bucketName`** *(string)*: Bucket Name of the data source. Default: `""`.
- **`prefix`** *(string)*: Prefix of the data source. Default: `""`.
- **`databaseName`** *(string)*: Optional name to give to the database in OpenMetadata. If left blank, we will use default as the database name.
- **`connectionOptions`**: Refer to *[../connectionBasicType.json#/definitions/connectionOptions](#/connectionBasicType.json#/definitions/connectionOptions)*.
- **`connectionArguments`**: Refer to *[../connectionBasicType.json#/definitions/connectionArguments](#/connectionBasicType.json#/definitions/connectionArguments)*.
- **`supportsMetadataExtraction`**: Refer to *[../connectionBasicType.json#/definitions/supportsMetadataExtraction](#/connectionBasicType.json#/definitions/supportsMetadataExtraction)*.
- **`supportsProfiler`**: Refer to *[../connectionBasicType.json#/definitions/supportsProfiler](#/connectionBasicType.json#/definitions/supportsProfiler)*.
## Definitions

- <a id="definitions/datalakeType"></a>**`datalakeType`** *(string)*: Service type. Must be one of: `["Datalake"]`. Default: `"Datalake"`.


Documentation file automatically generated at 2023-07-16 19:59:36.193714.
